Add app to read raw /dev/mem for debugging
This allows for direct access by the host to the same memory region as the AXIS
ports are accessing. Should be useful for debugging.

--- a/app/Makefile
+++ b/app/Makefile
@@ -4,6 +4,7 @@ CFLAGS := -c -Wall -Werror
 INCLUDES := -I.
 
 EXECUTABLE = \
+	read-memory \
 	test-cfg
 
 
@@ -13,6 +14,10 @@ all : $(EXECUTABLE)
 
 .c.o :
 	$(CC) $(INCLUDES) $(CFLAGS) $< -o $@
+
+
+read-memory : read-memory.o
+	$(CC) $< -o $@ $(LDFLAGS)
 
 
 test-cfg : test-cfg.o
