Add program for writing to memory using axis port
The application takes one argument, the number (or length) of data to be
written to the memory.

The physical address in main memory that is going to be written to is the
address of the CMA memory region on my currently running system.

--- a/app/Makefile
+++ b/app/Makefile
@@ -4,6 +4,7 @@ CFLAGS := -c -Wall -Werror
 INCLUDES := -I.
 
 EXECUTABLE = \
+	write-memory \
 	read-memory \
 	test-cfg
 
@@ -14,6 +15,10 @@ all : $(EXECUTABLE)
 
 .c.o :
 	$(CC) $(INCLUDES) $(CFLAGS) $< -o $@
+
+
+write-memory : write-memory.o
+	$(CC) $< -o $@ $(LDFLAGS)
 
 
 read-memory : read-memory.o
